# provider_dedupe

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  exact_match_config.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_tests.py
src/provider_dedupe/: __init__.py
src/provider_dedupe/cli/: __init__.py  main.py
src/provider_dedupe/core/: __init__.py  config.py  deduplicator.py  exceptions.py
src/provider_dedupe/models/: __init__.py  provider.py
src/provider_dedupe/services/: __init__.py  data_loader.py  data_quality.py  output_generator.py
src/provider_dedupe/utils/: __init__.py  logging.py  normalization.py
tests/: __init__.py  conftest.py  utils.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_cli.py  test_full_pipeline.py
tests/unit/: __init__.py  test_config.py  test_data_loader.py  test_data_quality.py  test_models.py  test_normalization.py
